--- a/sites/twin.run/index.html
+++ b/sites/twin.run/index.html
@@ -9,16 +9,17 @@
 </head>
 
 <body>
-    <!-- <div id="root"></div> -->
-    <!-- <script type="module" src="./src/App.tsx"></script> -->
-	<div style="width:100%;height:100%">
-        <div id="monaco-editor-root" style="width:100%;height:100%"></div>
-    </div>
+    <div id="root"></div>
+    <!-- <div style="width:100%;height:100%">
+        <div id="monaco-editor-root"></div>
+    </div> -->
     <script type="module">
         import { configureMonacoWorkers, runBrowserEditor } from "./src/index.ts";
 
         configureMonacoWorkers();
-        runBrowserEditor();
+        // runBrowserEditor();
     </script>
+    <script type="module" src="./src/App.tsx"></script>
 </body>
+
 </html>
