--- a/sites/twin.run/index.html
+++ b/sites/twin.run/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <div id="root"></div>
+    <script type="module" src="./src/Editor.tsx"></script>
     <!-- <div style="width:100%;height:100%">
         <div id="monaco-editor-root"></div>
     </div> -->
     <script type="module">
-        import { configureMonacoWorkers, runBrowserEditor } from "./src/index.ts";
+        import { configureMonacoWorkers } from "./src/index.ts";
 
         configureMonacoWorkers();
         // runBrowserEditor();
     </script>
-    <script type="module" src="./src/App.tsx"></script>
 </body>
 
 </html>
