--- a/sites/twin.run/index.html
+++ b/sites/twin.run/index.html
@@ -6,20 +6,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="module" src="./src/Editor.tsx"></script>
+    <script type="module" src="./src/App.tsx"></script>
     <!-- <div style="width:100%;height:100%">
         <div id="monaco-editor-root"></div>
     </div> -->
-    <script type="module">
+    <!-- <script type="module">
         import { configureMonacoWorkers } from "./src/index.ts";
 
         configureMonacoWorkers();
         // runBrowserEditor();
-    </script>
+    </script> -->
 </body>
 
 </html>
