feat(docs): twin run up!

--- a/sites/twin.run/index.html
+++ b/sites/twin.run/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Language Client Pure Browser Example</title>
+    <title>Native Twin Playground</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css">
@@ -12,17 +12,22 @@
 </head>
 
 <body>
-    <div id="root"></div>
-    <script type="module" src="./src/App.tsx"></script>
-    <!-- <div style="width:100%;height:100%">
-        <div id="monaco-editor-root"></div>
-    </div> -->
-    <!-- <script type="module">
-        import { configureMonacoWorkers } from "./src/index.ts";
+    <!-- <div id="root"></div>
+    <script type="module" src="./src/App.tsx"></script> -->
+    <div id="first-loading-status" class="loading-player">
+        <video src="./loading-status.webm" loop controls="none" autoplay></video>
+    </div>
+    <div class="twin-editor">
+        <div class="editor">
+            <div id="monaco-editor-root"></div>
+            <iframe id="editorPreview" frameborder="0"></iframe>
+        </div>
+    </div>
+    <script type="module">
+        import { main } from "./src/index.ts";
 
-        configureMonacoWorkers();
-        // runBrowserEditor();
-    </script> -->
+        main();
+    </script>
 </body>
 
 </html>
